# CuBIDS

./: .codespellrc  .dockerignore  .gitignore  .travis.yml  AGENTS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  NewPNC_CSVs_change_files.sh  OUT_PNC_change_files.sh  PNC_CSVs_files.csv  PNC_CSVs_summary.csv  README.md  README.rst  group_PNC.e6131615  group_PNC.o6131615  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_PNC.py  tox.ini  undo_changes.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: lint.yml
.readthedocs/: environment.yaml
BIDS_Dataset/sub-01/ses-phdiff/fmap/: sub-01_ses-phdiff_dir-PA_epi.json
BIDS_Dataset/sub-03/ses-phdiff/fmap/: sub-03_ses-phdiff_dir-PA_epi.json
CuBIDS_Toy_Dataset_Curation/: no_ped.txt  v0_files.csv  v1_files.csv  v1_summary.csv  v2_full_cmd.sh  v2_summary.csv
bond/: __init__.py  add_nifti_info.py  bond.py  cli.py  config.py  constants.py  docker_run.py  metadata_merge.py  validator.py
bond/data/: config.yml
bond/testdata/complete/: README  _change_files.sh
bond/testdata/complete/sub-01/ses-phdiff/anat/: sub-01_ses-phdiff_T1w.json
bond/testdata/complete/sub-01/ses-phdiff/fmap/: ._sub-CSDSI_ses-phdiff_acq-v4_phasediff.json
bond/testdata/complete/sub-02/ses-phdiff/fmap/: sub-02_ses-phdiff_acq-v4_phasediff.json
bond/testdata/complete/sub-03/ses-phdiff/fmap/: sub-03_ses-phdiff_acq-v4_phasediff.json
bond/testdata/complete/sub-03/ses-phdiff/func/: ._sub-CSDSI_ses-phdiff_acq-HASC55AP_dwi.json
bond/testdata/inconsistent/sub-01/ses-phdiff/fmap/: sub-01_ses-phdiff_acq-v4_magnitude1.json
bond/testdata/inconsistent/sub-02/ses-phdiff/dwi/: sub-02_ses-phdiff_acq-HASC55AP_dwi.json
bond/testdata/inconsistent/sub-02/ses-phdiff/func/: sub-02_ses-phdiff_task-rest_bold.json
cubids/: __about__.py  __init__.py  cli.py  config.py  constants.py  cubids.py  indexing.py  metadata_merge.py  utils.py  validator.py  workflows.py
cubids/data/: config.yml  schema.json
cubids/testdata/BIDS_Dataset/sub-01/ses-phdiff/anat/: sub-01_ses-phdiff_T1w.json
cubids/testdata/BIDS_Dataset/sub-01/ses-phdiff/dwi/: sub-01_ses-phdiff_acq-HASC55AP_dwi.bval
cubids/testdata/BIDS_Dataset/sub-01/ses-phdiff/fmap/: sub-01_ses-phdiff_acq-v4_magnitude1.json
cubids/testdata/BIDS_Dataset/sub-01/ses-phdiff/func/: sub-01_ses-phdiff_task-rest_bold.json
cubids/testdata/BIDS_Dataset/sub-02/ses-phdiff/fmap/: sub-02_ses-phdiff_acq-v4_phasediff.json
cubids/testdata/BIDS_Dataset/sub-03/ses-phdiff/dwi/: sub-03_ses-phdiff_acq-HASC55AP_dwi.json
cubids/testdata/BIDS_Dataset/sub-03/ses-phdiff/fmap/: sub-03_ses-phdiff_acq-v4_magnitude2.json  sub-03_ses-phdiff_acq-v4_phasediff.json
cubids/testdata/BIDS_Dataset/sub-04/ses-phdiff/fmap/: sub-04_ses-phdiff_dir-PA_epi.json
cubids/testdata/complete/sub-03/ses-phdiff/fmap/: sub-03_ses-phdiff_dir-PA_epi.json
cubids/testdata/inconsistent/sub-01/ses-phdiff/dwi/: sub-01_ses-phdiff_acq-HASC55AP_dwi.json
cubids/testdata/inconsistent/sub-02/ses-phdiff/func/: sub-02_ses-phdiff_task-rest_bold.json
cubids/testdata/inconsistent/sub-03/ses-phdiff/func/: sub-03_ses-phdiff_task-rest_bold.json
cubids/tests/: conftest.py  coverage.cfg  test_apply.py  test_bond.py  test_cli.py  test_cubids.py  test_file_collections.py  test_perf_m0.py  test_utils.py  test_variant_numbering.py  test_variants.py  utils.py
cubids/tests/data/BIDS_Dataset/: README
cubids/tests/data/BIDS_Dataset/sub-01/ses-phdiff/dwi/: sub-01_ses-phdiff_acq-HASC55AP_dwi.bvec  sub-01_ses-phdiff_acq-HASC55AP_dwi.json
cubids/tests/data/BIDS_Dataset/sub-01/ses-phdiff/fmap/: sub-01_ses-phdiff_acq-v4_phasediff.json
cubids/tests/data/BIDS_Dataset/sub-02/ses-phdiff/anat/: sub-02_ses-phdiff_T1w.json
cubids/tests/data/BIDS_Dataset/sub-02/ses-phdiff/dwi/: sub-02_ses-phdiff_acq-HASC55AP_dwi.json
cubids/tests/data/BIDS_Dataset/sub-02/ses-phdiff/fmap/: sub-02_ses-phdiff_dir-PA_epi.json
cubids/tests/data/CuBIDS_Toy_Dataset_Curation/: too_low_vols.txt  v0_AcqGroupInfo.txt  v0_files.csv  v0_summary.csv  v0_validation.csv  v1_AcqGroupInfo.txt  v1_files.csv  v1_summary.csv  v2_AcqGroupInfo.txt  v2_AcqGrouping.csv  v2_files.csv  v2_summary.csv
cubids/tests/data/complete/: dataset_description.json
cubids/tests/data/inconsistent/: README
cubids/tests/data/skeletons/: README.md  skeleton_apply_cross_sectional_realistic.yml  skeleton_apply_longitudinal_realistic.yml  skeleton_cli_commands.yml  skeleton_file_collection_01.yml  skeleton_file_collection_02.yml  skeleton_perf_m0.yml
docs/: Makefile  README.rst  about.rst  api.rst  cli.rst  conf.py  example.rst  examples.rst  faq.rst  glossary.rst  index.rst  installation.rst  links.rst  make.bat  readme.rst  usage.rst
docs/_static/: No_PED.txt  PNC_example_edited.csv  PNC_example_unedited.csv  PNC_post_apply_summary.csv  PNC_pre_apply_summary_dwi_run1.csv  PNC_pre_apply_summary_dwi_run1_deletion.csv  v0_edited_summary.csv  v0_summary.csv
docs/notebooks/: Fieldmaps.ipynb  FirstProofofConcept.ipynb  HTML_param_groups.ipynb  JSON_PoC_read_write.ipynb  Key_and_Param_Groups.ipynb  PofC_Key_Values2.ipynb  keyparamgrouptest.ipynb  metadata_image_param.ipynb  rename_files_work.ipynb  workwithtestdata.ipynb
docs/notebooks/Tests/: datatype-func_run-1_suffix-bold_task-rest.csv
docs/sphinxext/: github_link.py
notebooks/: Fieldmaps.ipynb  FirstProofofConcept.ipynb  HTML_param_groups.ipynb  JSON_PoC_read_write.ipynb  Key_and_Param_Groups.ipynb  NewTests_files.csv  NewTests_summary.csv  PofC_Key_Values2.ipynb  Untitled.ipynb  keyparamgrouptest.ipynb  metadata_image_param.ipynb  rename_files_work.ipynb  workwithtestdata.ipynb
notebooks/Tests/: datatype-anat_reconstruction-refaced_suffix-T1w.csv  datatype-func_run-2_suffix-bold_task-rest.csv  files.csv  summary.csv
notebooks/testdata/complete/sub-02/ses-phdiff/fmap/: sub-02_ses-phdiff_dir-PA_epi.json
tests/: __init__.py  test_bond.py
(+13 files in other folders)
