[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bond/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
doctests = True
exclude = *build/
per-file-ignores =
    # imported but unused
    __init__.py: F401
putty-ignore =
	*/__init__.py : +F401
	/^\s*\.\. _.*?: http/ : +E501

[options]
python_requires = >=3.7
install_requires =
	pybids
	pandas
	tqdm
	numpy
	datalad>=0.13.5
	wrapt<2,>=1.10
test_requires =
	nibabel
	pytest==4.6.5
	pytest-runner==5.1
	pip==19.2.3
	bump2version==0.5.11
	wheel==0.33.6
	watchdog==0.9.0
	flake8==3.7.8
	tox==3.14.0
	coverage==4.5.4
	Sphinx==1.8.5
	twine==1.14.0

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
	nbsphinx
	packaging
	sphinx >= 1.8
	sphinx-argparse
docs =
	%(doc)s
tests =
	coverage
	codecov
	pytest
	pytest-env
all =
	%(datalad)s
	%(doc)s
	%(tests)s

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
	PYTHONHASHSEED=0
filterwarnings =
	ignore::DeprecationWarning
junit_family = xunit2
